--- a/index.html
+++ b/index.html
@@ -574,13 +574,15 @@
                         </div>
                     </div>
                 </li>
-            </ul>
-            <div class="card bg-light">
-                <div class="card-body p-3 p-md-5">
-                    <div class="row">
-                        <div class="col-6">
-                            <h1 class="card-title">Bilan du stage</h1>
-                            <p class="card-text">Ce stage en tant que développeur full-stack à la MFR de Saint-Égrève
+
+                <li class="timeline-inverted">
+                    <div class="timeline-badge bg-mfr"><i class="fa-solid fa-list"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Bilan de stage</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Ce stage en tant que développeur full-stack à la MFR de Saint-Égrève
                                 m’a permis de
                                 mettre en pratique mes connaissances personnelles et théoriques acquises durant ma
                                 formation, dans un vrai projet d’entreprise, tout en étant confronté aux conditions
@@ -612,8 +614,7 @@
                                 aperçu du développement free-lance ; un secteur dans laquelle je pourrais peut-être
                                 mener une carrière dans le futur.
                             </p>
-                        </div>
-                        <div class="col-6 border-left">
+                            <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
                                 <span class="badge bg-secondary">New</span>
@@ -625,10 +626,11 @@
                                 <span class="badge bg-secondary">New</span>
                                 <span class="badge bg-secondary">New</span>
                             </div>
+
                         </div>
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </div>
     </section>
 
@@ -846,7 +848,8 @@
                             <p><small class="text-muted">Semaine 4 - Semaine 6</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Après un temps d'autoformation sur la technologie utilisée, nous avons développé l'interface capable de générer des paramètres de simulation de façon graphique.</p>
+                            <p>Après un temps d'autoformation sur la technologie utilisée, nous avons développé
+                                l'interface capable de générer des paramètres de simulation de façon graphique.</p>
                             <p>
                                 <span class="badge bg-js">JS</span>
                                 <span class="badge bg-interactjs">InteractJS</span>
@@ -868,7 +871,9 @@
 
                         </div>
                         <div class="timeline-body">
-                            <p>Nous avons inclus toutes les interfaces dans le même logiciel, que nous avons traduit en anglais afin de le rendre accessible à toute l'équipe. Finalement, nous avons compilé le code afin de le rendre facilement transmissible au sein de l'équipe.</p>
+                            <p>Nous avons inclus toutes les interfaces dans le même logiciel, que nous avons traduit en
+                                anglais afin de le rendre accessible à toute l'équipe. Finalement, nous avons compilé le
+                                code afin de le rendre facilement transmissible au sein de l'équipe.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
                                 <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-laptop-code me-2"></i> Démo</button>
@@ -886,37 +891,43 @@
                             <p><small class="text-muted">Semaine 5</small></p>
                         </div>
                         <div class="timeline-body">
-                            <p>Suite à la demande de notre tutrice, nous avons rédigé un guide d'utilisation afin de faciliter la compréhension de l'interface, le tout, en anglais.</p>
+                            <p>Suite à la demande de notre tutrice, nous avons rédigé un guide d'utilisation afin de
+                                faciliter la compréhension de l'interface, le tout, en anglais.</p>
                             </p>
                             <p>
-                                De plus, nous avons également rédigé un guide concernant la modification du code source, exclusivement pour notre tutrice afin de rendre l'ajout de fonctionnalités plus facile pour elle dans le futur.</p>
+                                De plus, nous avons également rédigé un guide concernant la modification du code source,
+                                exclusivement pour notre tutrice afin de rendre l'ajout de fonctionnalités plus facile
+                                pour elle dans le futur.</p>
 
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
                                 <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-book me-2"></i> Guide d'utilisation</button>
-                                        <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
-                                            class="fa-solid fa-book-atlas me-2"></i> Documentation</button>
+                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                        class="fa-solid fa-book-atlas me-2"></i> Documentation</button>
                             </div>
                         </div>
                     </div>
                 </li>
-            </ul>
-            <div class="card ">
-                <div class="card-body p-3 p-md-5">
-                    <div class="row">
-                        <div class="col-6">
-                            <h1 class="card-title">Bilan du stage</h1>
-                            <p class="card-text">Ce stage tant que développeur logiciel au sein d’une équipe
+
+                <li class="timeline-inverted">
+                    <div class="timeline-badge bg-timc"><i class="fa-solid fa-list"></i></div>
+                    <div class="timeline-panel">
+                        <div class="timeline-heading">
+                            <h4 class="timeline-title">Bilan de stage</h4>
+                        </div>
+                        <div class="timeline-body">
+                            <p>Ce stage tant que développeur logiciel au sein d’une équipe
                                 internationale m’a permis d’accroître, considérablement, ma capacité de
-                                travailler en équipe, de prendre des initiatives et ma motivation de poursuivre une carrière
+                                travailler en équipe, de prendre des initiatives et ma motivation de poursuivre une
+                                carrière
                                 dans ce domaine.
                             </p>
                             <p>
-                                De plus, j'ai pu acquérir de nombreuses compétences en langage de programmation et notamment en programmation objet et logiciel.
+                                De plus, j'ai pu acquérir de nombreuses compétences en langage de programmation et
+                                notamment en programmation objet et logiciel.
                             </p>
-                        </div>
-                        <div class="col-6 border-left">
+                            <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
                                 <span class="badge bg-secondary">New</span>
@@ -928,10 +939,11 @@
                                 <span class="badge bg-secondary">New</span>
                                 <span class="badge bg-secondary">New</span>
                             </div>
+
                         </div>
                     </div>
-                </div>
-            </div>
+                </li>
+            </ul>
         </div>
     </section>
 
