--- a/index.html
+++ b/index.html
@@ -930,16 +930,27 @@
                             <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
-                                <span class="badge bg-secondary">New</span>
-                                <span class="badge bg-secondary">New</span>
+                                <span class="badge bg-secondary">Analyse de besoins utilisateur</span>
+                                <span class="badge bg-secondary">Travaille d'équipe</span>
+                                <span class="badge bg-secondary">Pair programming</span>
+                                <span class="badge bg-secondary">Communication</span>
+                                <span class="badge bg-secondary">Autonomnie</span>
+                                <span class="badge bg-secondary">Adaptabilité</span>
+                                <span class="badge bg-secondary">Prise d'initiatives</span>
+                                <span class="badge bg-secondary">Travaille en Anglais</span>
                             </div>
                             <hr>
                             <div class="gap-2 justify-content-md-start mt-3">
                                 <h5>Hard skills</h5>
-                                <span class="badge bg-secondary">New</span>
-                                <span class="badge bg-secondary">New</span>
-                            </div>
-
+                                <span class="badge bg-secondary">POO</span>
+                                <span class="badge bg-secondary">C#</span>
+                                <span class="badge bg-secondary">C++</span>
+                                <span class="badge bg-secondary">Python</span>
+                                <span class="badge bg-secondary">R</span>
+                                <span class="badge bg-secondary">Plotly</span>
+                                <span class="badge bg-secondary">JS</span>
+                                <span class="badge bg-secondary">InteractJS</span>
+                             </div>
                         </div>
                     </div>
                 </li>
