--- a/index.html
+++ b/index.html
@@ -617,16 +617,27 @@
                             <hr>
                             <div class="gap-2 justify-content-md-start">
                                 <h5>Soft skills</h5>
-                                <span class="badge bg-secondary">New</span>
-                                <span class="badge bg-secondary">New</span>
+                                <span class="badge bg-secondary">Analyse de besoins utilisateur</span>
+                                <span class="badge bg-secondary">Analyse d'un cahier des charges</span>
+                                <span class="badge bg-secondary">Communication</span>
+                                <span class="badge bg-secondary">Autonomnie</span>
+                                <span class="badge bg-secondary">Adaptabilité</span>
+                                <span class="badge bg-secondary">Prise d'initiatives</span>
+                                <span class="badge bg-secondary">Assistance</span>
+                                <span class="badge bg-secondary">Documentation</span>
                             </div>
                             <hr>
                             <div class="gap-2 justify-content-md-start mt-3">
                                 <h5>Hard skills</h5>
-                                <span class="badge bg-secondary">New</span>
-                                <span class="badge bg-secondary">New</span>
+                                <span class="badge bg-secondary">PHP</span>
+                                <span class="badge bg-secondary">MySQl</span>
+                                <span class="badge bg-secondary">JS</span>
+                                <span class="badge bg-secondary">jQuery</span>
+                                <span class="badge bg-secondary">ChartJS</span>
+                                <span class="badge bg-secondary">Bootstrap</span>
+                                <span class="badge bg-secondary">APACHE</span>
+                                <span class="badge bg-secondary">Excel / CSV / JSON</span>
                             </div>
-
                         </div>
                     </div>
                 </li>
@@ -938,6 +949,7 @@
                                 <span class="badge bg-secondary">Adaptabilité</span>
                                 <span class="badge bg-secondary">Prise d'initiatives</span>
                                 <span class="badge bg-secondary">Travaille en Anglais</span>
+                                <span class="badge bg-secondary">Documentation</span>
                             </div>
                             <hr>
                             <div class="gap-2 justify-content-md-start mt-3">
@@ -950,7 +962,7 @@
                                 <span class="badge bg-secondary">Plotly</span>
                                 <span class="badge bg-secondary">JS</span>
                                 <span class="badge bg-secondary">InteractJS</span>
-                             </div>
+                            </div>
                         </div>
                     </div>
                 </li>
