--- a/index.html
+++ b/index.html
@@ -72,19 +72,19 @@
                         world’s most popular front-end open source toolkit, featuring Sass variables and mixins,
                         responsive grid system, extensive prebuilt components, and powerful JavaScript plugins.</p>
                     <div class="  gap-2 d-md-flex justify-content-md-start mt-4">
-                        <a href="https://www.linkedin.com/in/sefaguclu/" target="_blank">
+                        <a href="https://www.linkedin.com/in/sefaguclu/" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
                                 <i class="fab fa-linkedin-in"></i>
                             </button>
                         </a>
 
-                        <a href="https://github.com/guclusefa" target="_blank">
+                        <a href="https://github.com/guclusefa" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
                                 <i class="fab fa-github"></i>
                             </button>
                         </a>
 
-                        <a href="assets/files/CV_GUCLU_Sefa.pdf" target="_blank">
+                        <a href="assets/files/CV_GUCLU_Sefa.pdf" target="_blank" style="text-decoration: none;">
                             <button type="button" class="btn btn-outline-secondary btn-lg px-4">
                                 <i class="fas fa-download me-2"></i> MON CV
                             </button>
@@ -233,8 +233,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                <div class="row mt-5">
+
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
                         <div class="card-flyer">
                             <div class="text-box portfolio-item mx-auto" data-bs-toggle="modal"
