--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
     <div class="cursor"></div>
     <div class="cursor2"></div>
 
+
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top bg-white" id="mainNav">
         <div class="container">
@@ -128,6 +129,13 @@
                                     <h6 class="text-foodtrocs">FoodTrocs</h6>
                                     <figcaption class="figure-caption">Septrembre 2020</figcaption>
                                     <hr>
+                                    <p>
+                                        <a href="https://foodtrocs.go.yj.fr/accueil.php" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>foodtrocs.go.yj.fr</a>
+                                        <a href="https://github.com/guclusefa/foodtrocs" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
+                                    <hr>
                                     <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas aux des
                                         personnes de leurs alentours.
                                         <br><br> Projet personnel, réalisé à but pédagoqiues, afin d'apprendre les
@@ -157,6 +165,11 @@
                                     <h6 class="text-loto">JEU DU LOTO</h6>
                                     <figcaption class="figure-caption">Janvier 2021</figcaption>
                                     <hr>
+                                    <p>
+                                        <a href="https://sefacile.alwaysdata.net/loto/index.html" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>lotoguclu.alwaysdata.net</a>
+                                    </p>
+                                    <hr>
                                     <p>Simulation d'un jeu du loto national, capable d'estimer le temps qu'il faudrait
                                         pour gagner.
                                         <br><br>
@@ -182,6 +195,13 @@
                                 <div class="text-container">
                                     <h6 class="text-tresor">JEU DU TRÉSOR</h6>
                                     <figcaption class="figure-caption">Mai 2021</figcaption>
+                                    <hr>
+                                    <p>
+                                        <a href="https://sefacile.alwaysdata.net/chasseAuTresor/index.php" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>tresor.alwaysdata.net</a>
+                                        <a href="https://github.com/guclusefa/treasure-hunt" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
                                     <hr>
                                     <p>Jeu de chasse au trésor, capable d'inscrire les joueurs dans une base de données
                                         ainsi que de les classer selon leurs résultats.
@@ -211,6 +231,13 @@
                                 <div class="text-container">
                                     <h6 class="text-sautheuhz">PHARMACIE SAUTHEUHZ</h6>
                                     <figcaption class="figure-caption">Septrembre 2021</figcaption>
+                                    <hr>
+                                    <p>
+                                        <a href="https://sautheuhz.alwaysdata.net/sautheuhz" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>sautheuhz.alwaysdata.net</a>
+                                        <a href="https://github.com/guclusefa/sautheuhz" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
                                     <hr>
                                     <p>Application web permettant à une pharmacie et ses employés de gerer ses clients,
                                         ordonnances et stocks de manières aussi simple qu'intuitive
@@ -246,6 +273,13 @@
                                     <h6 class="text-nuitinfo">SAUVETEURS DU DUNKERQUOIS</h6>
                                     <figcaption class="figure-caption">Décembre 2021</figcaption>
                                     <hr>
+                                    <p>
+                                        <a href="https://nuitinfo.alwaysdata.net/" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>nuitinfo.alwaysdata.net</a>
+                                        <a href="https://github.com/guclusefa/nuitinfo" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
+                                    <hr>
                                     <p>Site dédié à l'histoire et au recensement des sauveteurs du dunkerquois.
                                         <br><br>
                                         Réalisé en groupe, dans le cadre du défi principal de la Nuit D'info 2021.
@@ -276,6 +310,11 @@
                                     <h6 class="text-nvo">NVO</h6>
                                     <figcaption class="figure-caption">Décembre 2021</figcaption>
                                     <hr>
+                                    <p>
+                                        <a href="https://github.com/guclusefa/nvo" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
+                                    <hr>
                                     <p>Site web accessible dans plusieurs thèmes et en plusieurs langues.
                                         <br><br>
                                         Projet personnel, réalisé en vue d'apprendre l'internalisation et les thèmes
@@ -304,6 +343,13 @@
                                 <div class="text-container">
                                     <h6 class="text-black">ASIMOV</h6>
                                     <figcaption class="figure-caption">Mars - Avril 2021</figcaption>
+                                    <hr>
+                                    <p>
+                                        <a href="https://asimov.alwaysdata.net/" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>asimov.alwaysdata.net</a>
+                                        <a href="https://github.com/guclusefa/asimov_web" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
                                     <hr>
                                     <p>Application web de géstion, également disponible en logiciel gràce à une API
                                         REST, permettant de gérer les differents acteurs d'un collège-lycée.
@@ -337,6 +383,13 @@
                                 <div class="text-container">
                                     <h6 class="text-epoka">EPOKA</h6>
                                     <figcaption class="figure-caption">Mars - Avril 2021</figcaption>
+                                    <hr>
+                                    <p>
+                                        <a href="https://epoka.alwaysdata.net/" target="_blank"><i
+                                                class="fa-solid fa-link me-1"></i>epoka.alwaysdata.net</a>
+                                        <a href="https://github.com/guclusefa/epoka_web" target="_blank"
+                                            class="ms-2 text-black"><i class="fa-brands fa-git-alt me-1"></i>git</a>
+                                    </p>
                                     <hr>
                                     <p>Application de géstion de salariés d'une PME, disponible en web et mobile.
                                         <br><br>
@@ -982,25 +1035,37 @@
             <div class="modal-dialog modal-xl">
                 <div class="modal-content">
                     <div class="modal-header border-0">
-                        <h3 class="text-uppercase text-secondary title-modal">Projet : FoodTrocs</h5>
+                        <h3 class="text-uppercase text-secondary">Projet : FoodTrocs</h5>
 
                             <button class="btn-close" type="button" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body text-center pb-5">
                         <div class="container text-start">
                             <div class="row justify-content-center">
-                                <div class="col-12">
-                                    <div class="card" style="width: 18rem;">
-                                        <div class="card-body">
-                                            <h5 class="card-title">Card title</h5>
-                                            <hr>
-                                            <img src="assets/img/portfolio/foodtrocs.svg" class="card-img-top">
-                                            <p class="card-text">Some quick example text to build on the card title and
-                                                make up the bulk of the card's content.</p>
-                                        </div>
+                                <div class="col-md-12 col-lg-4">
 
-                                    </div>
+                                    <h5 class="text-foodtrocs">FOODTROCS</h5>
+                                    <figcaption class="figure-caption">Septrembre 2020</figcaption>
+                                    <hr>
+                                    <img src="assets/img/portfolio/foodtrocs.svg" class="card-img-top">
+                                    <hr>
+                                    <p>Site type marketplace où les utilisateurs peuvent vendre leurs repas aux des
+                                        personnes de leurs alentours.
+                                        <br><br> Projet personnel, réalisé à but pédagoqiues, afin d'apprendre les
+                                        basiques de la
+                                        programmation.
+                                    </p>
+                                    <hr>
+                                    <p>
+                                        <span class="badge bg-php">PHP</span>
+                                        <span class="badge bg-mysql">MySQL</span>
+                                        <br>
+                                        <span class="badge bg-js mt-2">JS</span>
+                                    </p>
 
+                                </div>
+                                <div class="col-md-12 col-lg-8 mt-md-4 mt-lg-0">
+                                    <embed src="assets/files/CV_GUCLU_Sefa.pdf" width="100%" height="100%">
                                 </div>
                             </div>
                         </div>
