--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <!-- Navigation-->
     <nav class="navbar navbar-expand-lg text-uppercase fixed-top bg-white" id="mainNav">
         <div class="container">
-            <a class="navbar-brand text-secondary" href=" ">GUCLU SEFA</a>
+            <a class="navbar-brand text-secondary" href=" ">GUCLU <span class="text-primary">SEFA</span></a>
             <div class="navbar-toggler collapsed border-0 text-uppercase font-weight-bold" type="button"
                 data-bs-toggle="collapse" data-bs-target="#navbarResponsive" aria-controls="navbarResponsive"
                 aria-expanded="false" aria-label="Toggle navigation">
