--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         <!-- Topic Cards -->
         <div id="cards_landscape_wrap-2">
             <div class="container">
-                <h2 class="page-section-heading text-start text-uppercase text-secondary mb-0">MES PROJETS</h2>
+                <h2 class="page-section-heading text-start text-uppercase text-secondary mb-0">MES <span class="text-primary">PROJETS</span></h2>
                 <hr>
                 <div class="row">
                     <div class="col-xs-12 col-sm-6 col-md-6 col-lg-3">
@@ -419,7 +419,7 @@
     <section class="page-section portfolio bg-light" id="stage1">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading  text-uppercase text-secondary mb-0">STAGE DE 1ère année</h2>
+            <h2 class="page-section-heading  text-uppercase text-secondary mb-0">STAGE DE <span class="text-primary">1ère</span> année</h2>
             <hr>
             <ul class="timeline">
                 <li>
@@ -701,7 +701,7 @@
     <section class="page-section portfolio" id="stage2">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading  text-uppercase text-secondary mb-0">STAGE DE 2ème année</h2>
+            <h2 class="page-section-heading  text-uppercase text-secondary mb-0">STAGE DE <span class="text-primary">2ème</span> année</h2>
             <hr>
             <ul class="timeline">
                 <li>
