--- a/index.html
+++ b/index.html
@@ -802,7 +802,7 @@
                             <span class="badge bg-cpp">C++</span>
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal5" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-code me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
@@ -832,7 +832,8 @@
                                 <span class="badge bg-plotly">Plotly</span>
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal4"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-square-poll-vertical me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
@@ -914,7 +915,8 @@
                                 <span class="badge bg-interactjs">InteractJS</span>
                             </p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal3"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-pen-ruler me-2"></i> Captures d'écran</button>
                             </div>
                         </div>
@@ -934,8 +936,10 @@
                                 anglais afin de le rendre accessible à toute l'équipe. Finalement, nous avons compilé le
                                 code afin de le rendre facilement transmissible au sein de l'équipe.</p>
                             <div class="gap-2 justify-content-md-start mt-3">
-                                <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
-                                        class="fa-solid fa-laptop-code me-2"></i> Démo</button>
+                                <a href="https://www.transfernow.net/dl/pancreas-artificial" target="_blank">
+                                    <button type="button" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                            class="fa-solid fa-laptop-code me-2"></i> Démo</button>
+                                </a>
                             </div>
                         </div>
                     </div>
@@ -964,7 +968,8 @@
                                 <button data-bs-toggle="modal" data-bs-target="#portfolioModal1"
                                     class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-book me-2"></i> Guide d'utilisation</button>
-                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal2" class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
+                                <button data-bs-toggle="modal" data-bs-target="#portfolioModal2"
+                                    class="btn btn-outline-secondary btn-lg px-4 mt-1"><i
                                         class="fa-solid fa-book-atlas me-2"></i> Documentation</button>
                             </div>
                         </div>
@@ -1091,6 +1096,197 @@
                             </div>
                         </div>
 
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- TIMC CAP INTERACT-->
+        <div class="portfolio-modal modal fade" id="portfolioModal3" tabindex="-1" aria-labelledby="portfolioModal3"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-timc">TIMC :
+                                    </span>INTERFACE glisser-déposer</h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/interact0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 1</h5>
+                                        <p class="card-text">Lancement de l'interface à partir du logiciel</p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/interact1.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 2</h5>
+                                        <p class="card-text">Génération des paramètres à partir de l'interface</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mt-4">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/interact2.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 3</h5>
+                                        <p class="card-text">Extraction des paramètres</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/interact3.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 4</h5>
+                                        <p class="card-text">Visualisation graphique de la simulation</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- TIMC CAP PLOTLY-->
+        <div class="portfolio-modal modal fade" id="portfolioModal4" tabindex="-1" aria-labelledby="portfolioModal4"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-timc">TIMC :
+                                    </span>INTERFACE d'interprétation graphique</h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row justify-content-center">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/plotly0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 1</h5>
+                                        <p class="card-text">Lancement de l'interface à partir du logiciel, en indiquant
+                                            le seuil avec la possibilité de générer à partir d'une simulation enregistré
+                                            ou la dernière simulation ainsi que de sauvegarder la dernière simulation
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/plotly1.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 2</h5>
+                                        <p class="card-text">Génération du graphique</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row justify-content-center mt-4">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/interact3.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 3</h5>
+                                        <p class="card-text">Visualisation graphique de la simulation</p>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/plotly2.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 4</h5>
+                                        <p class="card-text">Sauvegarde des logs ainsi que du fichier .html du graphique
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <!-- TIMC CAP CSHAP-->
+        <div class="portfolio-modal modal fade" id="portfolioModal5" tabindex="-1" aria-labelledby="portfolioModal5"
+            aria-hidden="true">
+            <div class="modal-dialog modal-xl">
+                <div class="modal-content">
+                    <div class="modal-body border-0">
+                        <div class="row">
+                            <div class="col-11">
+                                <h3 class="text-uppercase text-secondary float-start"><span class="text-timc">TIMC :
+                                    </span>LOGICIEL</h5>
+                            </div>
+                            <div class="col-1">
+                                <button class="btn-close float-end" type="button" data-bs-dismiss="modal"
+                                    aria-label="Close"></button>
+                            </div>
+                        </div>
+                        <hr>
+                    </div>
+
+                    <div class="modal-body text-center lebodydemonmodal">
+                        <div class="row">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/logiciel0.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 1</h5>
+                                        <p class="card-text">Développement du logiciel ainsi que du formulaire des paramètres permettant de lancer la simulation
+                                        </p>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 mt-4 mt-lg-0">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/logiciel1.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 2</h5>
+                                        <p class="card-text">Exctraction des paramètres dans un fichier .txt afin d'être interprété par la simulation (de façon automatique)</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="row mt-4">
+                            <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6">
+                                <div class="card rounded-0">
+                                    <img src="assets/img/stages/timc/logiciel2.png" class="card-img-top">
+                                    <div class="card-body text-start">
+                                        <h5 class="card-title">Étape 3</h5>
+                                        <p class="card-text">Lancement de la simulation à partir du logiciel</p>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
